# ComfyUI-VideoBasic

./: README.md  __init__.py  pyproject.toml
nodes/: SaveVideo.py  VideoUpload.py  upscaleNode.py
web/: VideoBasic.js
workflow/: video_upscale_example.json
